tambah  skema awal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url= jdbc:postgresql://localhost/invoicedb
+spring.datasource.username= invoice
+spring.datasource.password= 4IGQ6XzcZ3BgaBIB1qcQ
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql = true
+
 
